# tf2-dataminer

./: .gitignore  LICENSE  __main__.py  build.py  config.yaml  config.yaml.default  config.yaml.sample  extractor.py  file.py  parsediff.py  processor.py  pyproject.toml  requirements.txt
dataminer/: __init__.py  build.py  extractor.py  file.py  processor.py  vpk.py
