[tool.poetry]
name = "dataminer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bsp-tool = "^0.4.0"
PyYAML = "^6.0.1"
vpk = "^1.4.0"

[tool.poetry.scripts]
dataminer = 'dataminer:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
